# restaurant_server_robot

./: README.md
restaurant_world/: CMakeLists.txt  README.md  package.xml  restaurant.world  setup.py
restaurant_world/launch/: nav2_with_map.launch.py  restaurant.launch.py
restaurant_world/maps/: restaurant_map.pgm  restaurant_map.yaml
restaurant_world/scripts/: multi_point_nav.py
